ci: use ghcr.io

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -38,9 +38,9 @@ jobs:
           - kairos-operator
           - k9s
     env:
-      REGISTRY: quay.io
-      REGISTRY_USER: ${{ secrets.REGISTRY_USERNAME }}
-      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+      REGISTRY: ghcr.io
+      REGISTRY_USER: ${{ github.actor }}
+      REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: docker/setup-qemu-action@v3
