feat: new flux-bootstrap bundle

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,6 +24,7 @@ jobs:
           - calico
           - cert-manager
           - flux
+          - flux-bootstrap
           - coco
           - kubevirt
           - kairos
